# project-oval

./: .gitignore  MapGUI.py  ProcessImage.py  README.md  cmd_list  deeplearning-env.yml  live_test.csv  lnseg.py  package.xml  pwm_genV3.5.py  pwm_genV4.py  pyproject.toml  setup.cfg  setup.py  setup.sh  setup_env.sh  version_control_guide.md
Data/: data_gps_logger_test4.csv  position_data_logger_test4.csv  position_data_logger_test5.csv
Documents/: README.md  cmd_list
GPS/: GPS_Notes  gps_test.py
GUI/: MapGUI.py  better_dijkstra.py  coords_to_cartesian.py  design.kv  djikstras_sample.py  main.py  node_ui.py  ui.py
Images/: Diagram 2024-06-11 18-17-34.uxf  WW-Round-BW
ML/: auto_labeler.py  building_identifier.py  cheap_gps_test.py  cheap_gps_trainer.py  ml_test.py  position_data_trainer_combined.csv
Matlab/: Comparing_Coordinates.asv  Comparing_Coordinates.m  Comparing_Coordinates_Test4.m  Comparing_Coordinates_Test5.m  Plot_Points.m  data_gps_logger_test4.csv  ml_test.py
PCB/: OVAL.kicad_pcb  OVAL.kicad_prl  OVAL.kicad_pro  OVAL.kicad_sch  README.md  fp-info-cache
Server/: README  Server.py  coords_to_cartesian.py  downloaded_file.csv  pos.csv  post_test.py  receive_test.py  sim.py  test.csv  waypoints.csv
Teensy/: README  teensy_code.ino
log/: data_logger1.csv  data_logger2.csv  data_logger_test3.csv
project-oval/: README.md  convertdata.py  data_collector_node.py  driver_node.py  driver_test.py  fake_zed_node.py  imu_node.py  lane_follower_node.py  legacy_driver_node.py  lidar_navigator.py  map_test.py  node_capture_images.py  node_data_logger.py  (+28 more)
(+314 files in other folders)
