[project]
name = "project-oval"
description = "A self driving car project"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "rclpy",
    "numpy",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
]

# UV configuration
[tool.uv]
python-preference = "only-managed"  # Ensures uv only manages dependencies inside the virtual environment

# RUFF configuration
[tool.ruff]
line-length = 100
target-version = "py310"
show-fixes = true
fixable = ["ALL"]  # Allow all fixable issues to be auto-fixed
exclude = ["scripts"]

[tool.ruff.lint]
ignore = ["PLR2004", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PERF203", "ISC001", "S311"]
select = ["E", "F", "I", "PL", "UP", "RUF", "PTH", "C4", "B", "PIE", "SIM", "RET", "RSE",
          "G", "ISC", "PT", "ASYNC", "TCH", "SLOT", "PERF", "PYI", "FLY", "AIR", "Q", "INP",
          "W", "YTT", "DTZ", "ARG", "T20", "FURB", "D100", "D101", "D300", "D418",
          "D419", "S", "NPY"]
